@@ -86,11 +86,15 @@ def _parse_revision_str(revstr):
     [<RevisionSpec_branch branch:../../branch2>]
     >>> _parse_revision_str('branch:../../branch2..23')
     [<RevisionSpec_branch branch:../../branch2>, <RevisionSpec_revno 23>]
+    >>> _parse_revision_str('branch:..\\\\branch2')
+    [<RevisionSpec_branch branch:..\\branch2>]
+    >>> _parse_revision_str('branch:..\\\\..\\\\branch2..23')
+    [<RevisionSpec_branch branch:..\\..\\branch2>, <RevisionSpec_revno 23>]
     """
     # TODO: Maybe move this into revisionspec.py
     revs = []
-    # split on the first .. that is not followed by a / ?
-    sep = re.compile("\\.\\.(?!/)")
+    # split on .. that is not followed by a / or \
+    sep = re.compile(r'\.\.(?![\\/])')
     for x in sep.split(revstr):
         revs.append(revisionspec.RevisionSpec.from_string(x or None))
     return revs
